adding chart endpoints
